--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "keycash/core",
+    "name": "keycash/magento1-core",
     "type": "magento-module",
     "license": [
         "OSL-3.0",
