Change author URL in readme and composer.json files

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         {
             "name": "Ammar Khalid",
             "email": "ammar@keycash.co",
-            "homepage": "https://github.com/amr-z",
+            "homepage": "https://api.github.com/user/4558603",
             "role": "Developer"
         }
     ]
